--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Kiki-Jiji.github.io/react_dev"
   "name": "ravenous",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
